--- a/_config.yml
+++ b/_config.yml
@@ -23,23 +23,15 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
-  pronouns         : # example: "she/her"  
+  name             : "贾景晗"
+  pronouns         : "鲁迅美术学院视觉传达方向硕士研究生"  
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  location         : "大连"
+  employer         : "Luxun Academy of Fine Arts"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "jjh@qq.com" 
 
-  # Academic websites
-  arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
-  impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
-  semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
-  scopus           : # URL
+
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
